2011-10-06  Amruth Raj  <amruthraj@motorola.com>

        Add Motorola Mobility to team.html
        https://bugs.webkit.org/show_bug.cgi?id=69597

        Reviewed by Ryosuke Niwa.

        * team.html:

2011-09-20  Ryosuke Niwa  <rniwa@webkit.org>

        Generate WebKit team's page out of committers.py
        https://bugs.webkit.org/show_bug.cgi?id=68045

        Fix per Daniel's review comment since I had misunderstood the code.

        * team.html:

2011-09-20  Ryosuke Niwa  <rniwa@webkit.org>

        Generate WebKit team's page out of committers.py
        https://bugs.webkit.org/show_bug.cgi?id=68045

        Reviewed by Daniel Bates.

        Add the initial implementation of team.html. This page automatically pulls data from committers.py
        There are no areas of expertise but that'll be added once the bug 68061 is fixed.

        * team.html: Added.

2011-09-01  Jon Lee  <jonlee@apple.com>

        Adding control rendering at various sizes.

        * projects/forms/survey.html:

2011-08-29  Jon Lee  <jonlee@apple.com>

        Updating forms survey with non-standard wrap for textarea and more data-list driven text fields.

        * projects/forms/survey.html:

2011-08-17  Jon Lee  <jonlee@apple.com>

        Updating the forms survey to include various element sizes.

        * projects/forms/survey.html:

2011-08-16  Daniel Bates  <dbates@webkit.org>

        Add myself to the list of individual members in the WebKit Security Group.

        Rubber-stamped by Eric Seidel.

        * security/security-group-members.html:

2011-08-09  Anders Carlsson  <andersca@apple.com>

        Broken link to LICENSE on contributing code page
        https://bugs.webkit.org/show_bug.cgi?id=65947

        Reviewed by Ryosuke Niwa.

        * coding/contributing.html:

2011-08-04  Dan Bernstein  <mitz@apple.com>

        Fixed a typo.

        * coding/contributing.html:

2011-08-04  Nico Weber  <thakis@chromium.org>
